@@ -1,0 +1,1 @@
+# /etc/dhcp/custom.conf
