@@ -1,0 +1,2 @@
+# /etc/dhcp/devices.conf
+include "/etc/dhcp/devices/@@school@@.conf";
