@@ -1,0 +1,63 @@
+# /etc/dhcp/dhcpd.conf
+
+# The ddns-updates-style parameter controls whether or not the server will
+# attempt to do a DNS update when a lease is confirmed. We default to the
+# behavior of the version 2 packages ('none', since DHCP v2 didn't
+# have support for DDNS.)
+server-identifier @@servername@@;
+update-static-leases true;
+ddns-update-style none;
+
+# option definitions common to all supported networks...
+server-name "@@servername@@.@@domainname@@";
+option domain-name "@@domainname@@";
+option netbios-name-servers @@serverip@@;
+option ntp-servers @@satellitegateway@@;
+option font-servers @@serverip@@;
+use-host-decl-names on;
+
+default-lease-time 600;
+max-lease-time 7200;
+
+# If this DHCP server is the official DHCP server for the local
+# network, the authoritative directive should be uncommented.
+authoritative;
+
+# Use this to send dhcp log messages to a different log file (you also
+# have to hack syslog.conf to complete the redirection).
+log-facility local7;
+
+allow booting;
+allow bootp;
+
+# Define option 150 for the grub menu
+option grubmenu code 150 = text;
+option arch code 93 = unsigned integer 16; #RFC4578
+
+# arch specific boot images
+if option arch = 00:06 {
+ filename "boot/grub/i386-efi/core.efi";
+} else if option arch = 00:07 {
+ filename "boot/grub/x86_64-efi/core.efi";
+} else {
+ filename "boot/grub/i386-pc/core.0";
+}
+
+next-server @@satelliteip@@;
+
+# subnet definitions
+include "/etc/dhcp/subnets.conf";
+
+group {
+
+ # groessere lease time fuer feste ips
+ default-lease-time 172800;
+ max-lease-time 172800;
+
+ # dynamically created stuff by linuxmuster-import-devices is included
+ include "/etc/dhcp/devices.conf";
+
+ # put your custom stuff in this included file
+ include "/etc/dhcp/custom.conf";
+
+}
